<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/writeCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="writeCalendar"
        android:text="@string/writeCalendar" />

    <Button
        android:id="@+id/getCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getFromCalendar"
        android:text="@string/getFromCalendar" />
    
    <Button
        android:id="@+id/goTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToEvents"
        android:text="@string/goTo" />
    
    <Button
        android:id="@+id/goTo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToEventEditActivity"
        android:text="@string/goTo2" />

</LinearLayout>
