<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_edit"
        android:gravity="center"
        android:textSize="25dip"
        android:textStyle="bold"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        tools:context=".EventEditActivity" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
        <TextView
            android:id="@+id/edit_event_title_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/edit_event_title_header" />
        
        <EditText
            android:id="@+id/edit_event_title"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:textSize="15dip"
            android:hint="@string/edit_event_title" />
        
        <TextView
            android:id="@+id/edit_event_begin_date_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/edit_event_begin_date_header" />
        
        <Button
            android:id="@+id/edit_event_begin_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_event_begin_date"
            android:onClick="enterDate"
            android:gravity="center"
            android:textSize="15dip"
            />
        
        <TextView
            android:id="@+id/edit_event_begin_time_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/edit_event_begin_time_header" />
        
        <Button
            android:id="@+id/edit_event_begin_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_event_begin_time"
            android:onClick="enterTime"
            android:gravity="center"
            android:textSize="15dip"
            />
        
        <Button
            android:id="@+id/edit_event_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_event_submit"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dip"
            />
        
        
        </LinearLayout>
        
    </ScrollView>

</LinearLayout>
